--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -2,6 +2,7 @@
 * xref:installing.adoc[Installing the Desktop Synchronization Client]
 * xref:navigating.adoc[Using the Synchronization Client]
 * xref:vfs.adoc[Using the Virtual Filesystem]
+* xref:filenames.adoc[Filename Considerations]
 * xref:conflicts.adoc[Manage Synchronisation Conflicts]
 * xref:automatic_updater.adoc[Automatic Updating the Client]
 * xref:removing.adoc[Removing the Client]
