--- a/modules/ROOT/pages/appendices/guitest.adoc
+++ b/modules/ROOT/pages/appendices/guitest.adoc
@@ -81,7 +81,7 @@ Some necessary steps before running tests:
 . Copy `test/gui/config.sample.ini` to `test/suite_oc-desktop/config.ini`
 . Edit `test/gui/config.ini` and set `BACKEND_HOST=` to the URL of your ownCloud server, e.g. `BACKEND_HOST=http://localhost/owncloud-core`
 
-NOTE: BACKEND_HOST can be any server but it's required that password for user 'admin' is set to 'admin'
+NOTE: BACKEND_HOST can be any server, but it is required that the password for the user `admin` is set to `admin`.
 
 . Start Squish
 . Open the existing test-suite via: menu:File[Open Test Suite > test/gui]
