add more page aliases for pages now in appendices folder

--- a/modules/ROOT/pages/appendices/troubleshooting.adoc
+++ b/modules/ROOT/pages/appendices/troubleshooting.adoc
@@ -2,6 +2,7 @@
 :toc: right
 :toclevels: 1
 :files-antivirus-app-url: https://github.com/owncloud/files_antivirus
+:page-aliases: troubleshooting.adoc
 
 == Introduction
 
