--- a/modules/ROOT/pages/appendices/architecture.adoc
+++ b/modules/ROOT/pages/appendices/architecture.adoc
@@ -2,6 +2,7 @@
 :toc: right
 :toclevels: 1
 :theopengroup-url: http://pubs.opengroup.org/onlinepubs/009695399/utilities/xcu_chap02.html#tag_02_13_01
+:page-aliases: architecture.adoc
 
 == Introduction
 
