[2.8] [PR 109] Fix pdf image size
Backport of PR #109

--- a/modules/ROOT/pages/appendices/troubleshooting.adoc
+++ b/modules/ROOT/pages/appendices/troubleshooting.adoc
@@ -71,7 +71,7 @@ Client log files contain file and folder names, metadata, server URLs and other 
 +
 The Log Output window opens.
 +
-image:log_output_window.png[image,width=60%]
+image:log_output_window.png[image,width=60%,pdfwidth=60%]
 +
 .  Enable the btn:[Enable logging to temporary folder] checkbox.
 .  Later, to find the log files, click the btn:[Open folder] button.
