--- a/modules/ROOT/pages/appendices/building.adoc
+++ b/modules/ROOT/pages/appendices/building.adoc
@@ -13,6 +13,8 @@
 :qtkeychain-url: https://github.com/frankosterfeld/qtkeychain
 :page-aliases: building.adoc
 
+== Introduction
+
 This section explains how to build link:https://owncloud.org/download/#owncloud-desktop-client[the ownCloud Client] from source for all major platforms.
 You should read this section if you want to develop for the desktop client.
 Build instructions are subject to change as development proceeds.
