--- a/modules/ROOT/pages/vfs.adoc
+++ b/modules/ROOT/pages/vfs.adoc
@@ -39,7 +39,7 @@ An empty representation of the file and only available if the sync service is av
 
 The following image demonstrates how the _full pinned_, _full_ and _placeholder_ file states are shown in File Explorer.
 
-image:vfs/vfs-ms-cloud-file-states-file-explorer.png[File States, width=50%]
+image:vfs/vfs-ms-cloud-file-states-file-explorer.png[File States, width=50%,pdfwidth=50%]
 
 === Limitations and Restrictions
 
@@ -65,21 +65,21 @@ To set up a new synchronization with virtual file system enabled, perform the fo
 
 . Add a new synchronization by clicking the btn:[+ Add account] button.
 +
-image:vfs/vfs-add account.png[Add Account, width=50%]
+image:vfs/vfs-add account.png[Add Account, width=50%,pdfwidth=50%]
 
 . Enter the server address and your credentials in the following dialogs.
 
 . Select the radio button btn:[Use virtual files] and set the local folder where your synchronization data will reside.
 +
-image:vfs/vfs-sync-type.png[Set the Sync Type, width=80%]
+image:vfs/vfs-sync-type.png[Set the Sync Type, width=80%,pdfwidth=80%]
 
 . When everything is done, you should see a similar screen as below, showing that the setup completed successfully.
 +
-image:vfs/vfs-setup-successful.png[Setup Successful, width=80%]
+image:vfs/vfs-setup-successful.png[Setup Successful, width=80%,pdfwidth=80%]
 
 . After the first sync, your synchronization folder will show your items with the _Placeholder_ icon.
 +
-image:vfs/vfs-setup-successful-explorer.png[Setup Successful Explorer, width=80%]
+image:vfs/vfs-setup-successful-explorer.png[Setup Successful Explorer, width=80%,pdfwidth=80%]
 
 . When opening a file, the file gets downloaded and its synchronization icon changes to _Full_.
 
@@ -89,7 +89,7 @@ If you have full synchronization enabled, you can change to a virtual file syste
 
 . Open your existing synchronization, click the btn:[...] button and menu:Enable virtual file support[].
 +
-image:vfs/vfs-convert-to-vfs.png[Convert Full to VFS, width=80%]
+image:vfs/vfs-convert-to-vfs.png[Convert Full to VFS, width=80%,pdfwidth=80%]
 
 . Your local files will get replaced by _placeholders_, thus freeing up the space previously occupied.
 
@@ -99,15 +99,15 @@ You can also change the synchronization setting from virtual file system to full
 
 . Open your existing synchronization, click the btn:[...] button and menu:Disable virtual file support[].
 +
-image:vfs/vfs-disable-virtual-file-support-1.png[Disable VFS 1, width=80%]
+image:vfs/vfs-disable-virtual-file-support-1.png[Disable VFS 1, width=80%,pdfwidth=80%]
 
 . A notification window will ask you to confirm before completing the conversion.
 +
-image:vfs/vfs-disable-virtual-file-support-2.png[Disable VFS 2, width=80%]
+image:vfs/vfs-disable-virtual-file-support-2.png[Disable VFS 2, width=80%,pdfwidth=80%]
 
 . When done, your files will be fully downloaded, which you can tell by the sync icons, see the example image below. Depending on the quantity and size of the files, this may take a while.
 +
-image:vfs/vfs-full-sync-no-vfs.png[Full Snyc No VFS, width=80%]
+image:vfs/vfs-full-sync-no-vfs.png[Full Snyc No VFS, width=80%,pdfwidth=80%]
 
 === Manage VFS from ownCloud
 
@@ -117,13 +117,13 @@ You can manage the synchronization for all files and folders via ownCloud. This 
 
 . Open your existing synchronization, click the btn:[...] button and menu:Availability[Make always available locally].
 +
-image:vfs/vfs-make-always-availabe.png[Make Iteams always Available, width=80%]
+image:vfs/vfs-make-always-availabe.png[Make Iteams always Available, width=80%,pdfwidth=80%]
 
 . When opening the Explorer, you will see that all files get the sync icon image:vfs/vfs-free-up-local-space-icon.png[Free Up Space Icon].
 +
-image:vfs/vfs-free-up-local-space-done.png[Free Up Space Done, width=80%]
+image:vfs/vfs-free-up-local-space-done.png[Free Up Space Done, width=80%,pdfwidth=80%]
 . The icon will change to _Full Pinned_ when downloaded.
-image:vfs/vfs-make-always-availabe-start-sync.png[Make Iteams always Available Start Sync, width=80%]
+image:vfs/vfs-make-always-availabe-start-sync.png[Make Iteams always Available Start Sync, width=80%,pdfwidth=80%]
 
 ==== Make All Files _Placeholders_
 
@@ -131,11 +131,11 @@ You can free up space by unpinning all files at once and making them placeholder
 
 . Open your existing synchronization, click the btn:[...] button and menu:Availability[Free up local space].
 +
-image:vfs/vfs-free-up-local-space.png[Free Up Space, width=80%]
+image:vfs/vfs-free-up-local-space.png[Free Up Space, width=80%,pdfwidth=80%]
 
 . When done, Explorer will show the files in _Placeholder_ state.
 +
-image:vfs/vfs-setup-successful-explorer.png[Setup Successful Explorer, width=80%]
+image:vfs/vfs-setup-successful-explorer.png[Setup Successful Explorer, width=80%,pdfwidth=80%]
 
 === Manage VFS from Windows Explorer
 
@@ -145,22 +145,22 @@ You can manage individual files in the Explorer window by menu:right-clicking[] 
  
 . To create a Full Pinned file (have a local copy of it), use the action btn:[Always keep on this device].
 +
-image:vfs/vfs-always-keep-on-this-device.png[Always keep on this Device, width=80%]
+image:vfs/vfs-always-keep-on-this-device.png[Always keep on this Device, width=80%,pdfwidth=80%]
 +
 The state of the file will change to synchronizing.
 +
-image:vfs/vfs-always-keep-on-this-device-syncing.png[Always keep on this Device Syncing, width=50%]
+image:vfs/vfs-always-keep-on-this-device-syncing.png[Always keep on this Device Syncing, width=50%,pdfwidth=50%]
 +
 When the local copy has been created, the state (icon) changes to _Full Pinned_.
 +
-image:vfs/vfs-always-keep-on-this-device-synced.png[Always keep on this Device Syned, width=50%]
+image:vfs/vfs-always-keep-on-this-device-synced.png[Always keep on this Device Syned, width=50%,pdfwidth=50%]
 
 ==== Free up Space of a File
 
 . To free up the space the file occupied, use the action btn:[Free up space].
 +
-image:vfs/vfs-free-up-space.png[Free Up Space, width=50%]
+image:vfs/vfs-free-up-space.png[Free Up Space, width=50%,pdfwidth=50%]
 
 . When done, Explorer will show the file in _Placeholder_ state.
 +
-image:vfs/vfs-setup-successful-explorer.png[Setup Successful Explorer, width=80%]
+image:vfs/vfs-setup-successful-explorer.png[Setup Successful Explorer, width=80%,pdfwidth=80%]
