fix various issues

--- a/modules/ROOT/pages/installing.adoc
+++ b/modules/ROOT/pages/installing.adoc
@@ -1,6 +1,8 @@
 = Installing the Desktop Synchronization Client
 :toc: right
 
+== Introduction
+
 You can download the latest version of the ownCloud Desktop Synchronization Client from the https://owncloud.com/download/#desktop-clients[ownCloud download page]. There are clients for _Linux_, _macOS_, and _Microsoft Windows_.
 
 Installation on Mac OS X and Windows is the same as for any software application: download the program and then double-click it to launch the installation, and then follow the installation wizard. After it is installed and configured the sync client will automatically keep itself updated; see `autoupdate` for more information.
@@ -187,15 +189,15 @@ msiexec /i ownCloud-x.y.z.msi DO_NOT_SCHEDULE_REBOOT="1"
 
 The installation wizard takes you step-by-step through configuration options and account setup. First you need to enter the URL of your ownCloud server.
 
-image:client-1.png[form for entering ownCloud server URL,width=60%,pdfwidth=60%]
+image:installing/client-1.png[form for entering ownCloud server URL, width=60%,pdfwidth=60%]
 
 Enter your ownCloud login on the next screen.
 
-image:client-2.png[form for entering your ownCloud login,width=60%,pdfwidth=60%]
+image:installing/client-2.png[form for entering your ownCloud login, width=60%,pdfwidth=60%]
 
 On the _"Local Folder Option"_ screen you may sync all of your files on the ownCloud server, or select individual folders. The default local sync folder is `ownCloud`, in your home directory. You may change this as well.
 
-image:client-3.png[Select which remote folders to sync, and which local folder to store them in,width=60%,pdfwidth=60%]
+image:installing/client-3.png[Select which remote folders to sync, and which local folder to store them in, width=60%,pdfwidth=60%]
 
 When you have completed selecting your sync folders, click the _"Connect"_ button at the bottom right. The client will attempt to connect to your ownCloud server, and when it is successful you'll see two buttons:
 
