--- a/modules/ROOT/pages/appendices/troubleshooting.adoc
+++ b/modules/ROOT/pages/appendices/troubleshooting.adoc
@@ -1,8 +1,7 @@
 = Appendix Troubleshooting
 :toc: right
-:toclevels: 1
-:files-antivirus-app-url: https://github.com/owncloud/files_antivirus
 :page-aliases: troubleshooting.adoc
+:files-antivirus-app-url: https://github.com/owncloud/files_antivirus
 
 == Introduction
 
@@ -71,7 +70,7 @@ Client log files contain file and folder names, metadata, server URLs and other 
 +
 The Log Output window opens.
 +
-image:log_output_window.png[image,width=60%,pdfwidth=60%]
+image:appendices/troubleshooting/log_output_window.png[image,width=60%,pdfwidth=60%]
 +
 .  Enable the btn:[Enable logging to temporary folder] checkbox.
 .  Later, to find the log files, click the btn:[Open folder] button.
@@ -152,7 +151,7 @@ QT_LOGGING_RULES='*=false;sync.httplogger=true' \
   --logdebug --logfile <file>
 ----
 
-=== ownCloud server Log File
+=== ownCloud Server Log File
 
 The ownCloud server also maintains an ownCloud specific log file. This log file must be enabled through the ownCloud Administration page. On that page, you can adjust the log level. We recommend that when setting the log file level that you set it to a verbose level like `Debug` or `Info`.
 
