--- a/modules/ROOT/pages/conflicts.adoc
+++ b/modules/ROOT/pages/conflicts.adoc
@@ -6,7 +6,7 @@
 
 The ownCloud desktop client uploads local changes and downloads remote changes. When a file has changed on the local and on the remote side between synchronization runs, the client will be unable to resolve the situation on its own. It will create a conflict file with the local version, downloads the remote version and notifies the user that a conflict occurred which needs attention.
 
-=== Example
+== Example Situation
 
 Imagine there is a file called `mydata.txt` your synchronized folder. It has not changed for a while and contains the text "contents" locally and remotely. Now, nearly at the same time you update it locally to say "_local contents_" while the file on the server gets updated to contain "_remote contents_" by someone else.
 
