--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -18,3 +18,4 @@
 ** xref:appendices/architecture.adoc[History and Architecture]
 ** xref:appendices/troubleshooting.adoc[Troubleshooting]
 ** xref:appendices/guitest.adoc[GUI Testing the Desktop Client]
+** xref:appendices/release_notes.adoc[Release Notes]
