--- a/modules/ROOT/pages/installing.adoc
+++ b/modules/ROOT/pages/installing.adoc
@@ -23,10 +23,10 @@ You will also find links to source code archives and older versions on the downl
 * Windows 7+ (x86 with 32-bit or x86-64; Native WinVFS available for Windows 10 version 1709 or later)
 * macOS 10.12+ (x86-64 or Apple M in Rosetta 2 emulation; unsupported legacy builds for Mac OS X 10.10 & 10.11 available)
 * CentOS 7.6+ & 8 (x86-64)
-* Debian 9.0 & 10 (x86-64)
-* Fedora 31 & 32 & 33 (x86-64)
-* Ubuntu 18.04 & 20.04 & 20.10 & 21.04 (x86-64)
-* openSUSE Leap 15.1 & 15.2 (x86-64)
+* Debian 10 & 11 (x86-64)
+* Fedora 33 & 34 & 35 (x86-64)
+* Ubuntu 20.04 & 21.04 & 21.10 (x86-64)
+* openSUSE Leap 15.2 & 15.3 (x86-64)
 
 NOTE: For Linux distributions, we support, if technically feasible, the latest 2 versions per platform and the previous Ubuntu https://wiki.ubuntu.com/LTS[LTS].
 
