[2.9] [PR 226] Use correct source language
Backport of PR #226

--- a/modules/ROOT/pages/installing.adoc
+++ b/modules/ROOT/pages/installing.adoc
@@ -30,7 +30,7 @@ Linux::
 * CentOS 7.6+ & 8 (x86-64)
 ** Note the Python extensions for nautilus (GNOME) and its forks nemo (Cinnamon) and caja (MATE) are available only in the third-party EPEL archives which needs to be installed separately before the ownCloud package can be installed. To do so, run
 +
-[source,console]
+[source,bash]
 ----
 sudo yum install epel-release
 ----
